# dTOOL

./: README.md  RELEASES.md
codex_dashflow/: .manager_notes  Cargo.toml  PLATFORM_DEPS.md  README.md  code_stats.py  init.sh
codex_dashflow/crates/apply-patch/: Cargo.toml  apply_patch_tool_instructions.md
codex_dashflow/crates/cli/: Cargo.toml  build.rs
codex_dashflow/crates/core/: Cargo.toml
codex_dashflow/crates/exec/: Cargo.toml
codex_dashflow/crates/file-search/: Cargo.toml
codex_dashflow/crates/mcp/: Cargo.toml
codex_dashflow/crates/mcp-server/: Cargo.toml
codex_dashflow/crates/process-hardening/: Cargo.toml
codex_dashflow/crates/sandbox/: Cargo.toml
codex_dashflow/crates/tui/: Cargo.toml
codex_dashflow/examples/: config.toml
dashflow/benchmarks/memory_profiling/: Cargo.toml  memory_bench_python.py  run_benchmarks.sh  run_memory_benchmarks.sh
dashflow/benchmarks/python_comparison/: COMPARISON_REPORT.md  Cargo.toml  PERFORMANCE_CLAIMS_VERIFICATION.md  analyze_performance.py  bench_core_operations.py  compare_document_loaders.py  compare_document_loaders.rs  compare_parsers.py  compare_parsers.rs  compare_results.py  compare_text_splitters.py  compare_text_splitters.rs  comparison_report.py  extract_rust_results.py
dashflow/crates/dashflow-annoy/: Cargo.toml  README.md
dashflow/crates/dashflow-anthropic/: Cargo.toml  README.md
dashflow/crates/dashflow-arxiv/: Cargo.toml  README.md
dashflow/crates/dashflow-azure-openai/: Cargo.toml  README.md
dashflow/crates/dashflow-bedrock/: Cargo.toml  README.md
dashflow/crates/dashflow-benchmarks/: Cargo.toml  README.md
dashflow/crates/dashflow-bing/: Cargo.toml  README.md
dashflow/crates/dashflow-brave/: Cargo.toml  README.md
dashflow/crates/dashflow-calculator/: Cargo.toml  README.md
dashflow/crates/dashflow-cassandra/: Cargo.toml  README.md
dashflow/crates/dashflow-chains/: Cargo.toml  README.md
dashflow/crates/dashflow-chroma/: Cargo.toml  README.md
dashflow/fuzz/: Cargo.toml
dashflow/fuzz/corpus/: README.md
dashflow/fuzz/fuzz_targets/: fuzz_csv_parser.rs  fuzz_datetime_parser.rs  fuzz_email_parser.rs  fuzz_ics_parser.rs  fuzz_json_parser.rs  fuzz_list_parsers.rs  fuzz_markdown_parser.rs  fuzz_protobuf_codec.rs  fuzz_query_parser.rs  fuzz_regex_parser.rs  fuzz_signature_parser.rs  fuzz_vcf_parser.rs  fuzz_xml_parser.rs  fuzz_yaml_parser.rs
dashflow/test-utils/: Cargo.toml  README.md
dashterm/dashterm-core/: Cargo.toml
dterm/: ACK-DASHTERM2-MESSAGE.md  Cargo.toml  LICENSE  MESSAGE-FROM-DASHTERM2-AI.md  README.md  READY-FOR-INTEGRATION-BOX-DRAWING.md  READY-FOR-INTEGRATION-ITERM-IMAGES.md  READY-FOR-INTEGRATION-METAL-SHADER.md  READY-FOR-INTEGRATION-POWERLINE.md  READY-FOR-INTEGRATION-UNDERLINES.md  STATUS.md  TO_DASHTERM2_GPU_FFI_READY_2025-12-31.md  TO_DASHTERM2_METAL_SHADER_MIGRATION_2025-12-31.md  TO_WORKER_40_IMPROVEMENTS.md  TO_WORKER_COMPLETE_ALL_REMAINING.md  TO_WORKER_RENDERING_GAPS_2025-12-31.md  setup_labels.sh
dterm/.buildkite/: pipeline.yml
dterm/docs/: AUDIT_GPU_FLAGS.md  BENCHMARKS.md  BUILDING.md  BUILDKITE_PROVISIONING.md  CI_ALTERNATIVES.md  CONFIG_HOT_RELOAD.md  CONFORMANCE.md  DASHTERM2_GPU_FEATURE_REQUESTS.md  DASHTERM2_INTEGRATION.md  DEVELOPMENT-STRATEGY.md  DTERM_CORE_GAPS.md  FEATURE_UNION.md  FUZZ_RESULTS.md  GAP_ANALYSIS.md  GAP_TRACKER.md  IMPLEMENTATION_CHECKLIST.md  METAL_SHADER_MIGRATION.md  PENDING_WORK.md  RETROSPECTIVE_INVISIBLE_CHARS_2025-12-31.md  ROADMAP.md  ROADMAP_PHASE_13_UI_INTEGRATION.md  ROADMAP_PHASE_E_GPU_RENDERER.md  SPEECH_BINDINGS_PLAN.md  STRATEGY.md  SWIFT_BINDINGS.md  TLA_SPECIFICATION_ROADMAP.md  TLA_VERIFICATION.md  UNIFIED_ROADMAP.md  VOICE_E2E_TESTING.md  WASM_PLUGIN_SYSTEM.md
dterm/research/: ANALYSIS.md  DTERM_DESIGN.md  RESEARCH_INDEX.md  alacritty_ANALYSIS.md  contour_ANALYSIS.md  foot_ANALYSIS.md  ghostty_ANALYSIS.md  kitty_ANALYSIS.md  rio_ANALYSIS.md  swiftterm_ANALYSIS.md  warp_ANALYSIS.md  wezterm_ANALYSIS.md  windows-terminal_ANALYSIS.md  zellij_ANALYSIS.md
dterm/scripts/: perf-gate.sh  prove-best.sh  regenerate-ffi-header.sh  sanitizer-check.sh  tlc.sh  vttest.sh
dterm/src/: clipboard.rs  main.rs  prompt.rs  pty.rs  telemetry.rs  tui.rs  updater.rs
dterm/tests/: box_drawing_test.txt
dterm/tla/: AgentApproval.cfg  AgentApproval.tla  AgentMediaBridge.cfg  AgentMediaBridge.tla  AgentOrchestration.cfg  AgentOrchestration.tla  Animation.cfg  Animation.tla  Coalesce.cfg  Coalesce.tla  DoubleWidth.cfg  DoubleWidth.tla  Grid.cfg  Grid.tla  MediaServer.cfg  MediaServer.tla  PagePool.cfg  PagePool.tla  Parser.cfg  Parser.tla  RenderPipeline.cfg  RenderPipeline.tla  Scrollback.cfg  Scrollback.tla  Selection.cfg  Selection.tla  StreamingSearch.cfg  StreamingSearch.tla  Terminal.cfg  Terminal.tla  TerminalModes.cfg  TerminalModes.tla  UIStateMachine.cfg  UIStateMachine.tla  VT52.cfg  VT52.tla
inky/: AI_TECHNICAL_SPEC.md  CHANGELOG.md  Cargo.toml  PERFORMANCE.md  README.md  SECURITY.md  roadmap_to_issues.sh  rustfmt.toml
inky/.githooks/: README.md  pre-commit
inky/benches/: comparison.rs  regression.rs  render.rs
inky/docs/: ACCESSIBILITY.md  ARCHITECTURE_TAFFY_BYPASS.md  CODEX_PORTER_FEEDBACK.md  CODEX_PORTER_ISSUES.md  CODEX_PORTER_LIVE_FEEDBACK.md  CODEX_PORTER_REQUESTS.md  CODEX_PORTER_RESPONSE.md  CODEX_PORTER_STATUS.md  EXTERNAL_FEEDBACK.md  PERFORMANCE.md  RESPONSE_TO_PORTER.md  ROADMAP.md  USAGE.md  WORKER_DIRECTIONS.md
inky/examples/: adaptive.rs  ansi_text.rs  async_streaming.rs  claude_tui.rs  codex_tui.rs  counter.rs  custom_widget.rs  dashboard.rs  focus.rs  form.rs  hello.rs  mouse.rs  ratatui_migration.rs  virtual_list.rs  visualization.rs  widgets.rs
inky/fuzz/: .gitignore  Cargo.toml
inky/scripts/: coverage.sh  miri-check.sh  release.sh
inky/src/: accessibility.rs  animation.rs  ansi.rs  app.rs  clipboard.rs  diff.rs  elm.rs  hit_test.rs  layout.rs  lib.rs  macros.rs  node.rs  perception.rs  style.rs  stylesheet.rs
inky/src/compat/: mod.rs  (+1 more)
inky/tests/: chaos.rs  codex_integration.rs  integration.rs  property.rs  regression.rs  snapshots.rs  stress.rs  test_generate_skill_index.py
(+5404 files in other folders)
