[package]
name = "inky-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Andrew Yates"]
description = "GPU-accelerated terminal UI framework with React-like components, flexbox layout, and AI assistant widgets"
license = "Apache-2.0"
repository = "https://github.com/dropbox/dTOOL/inky"
homepage = "https://github.com/dropbox/dTOOL/inky"
documentation = "https://docs.rs/inky-tui"
readme = "README.md"
keywords = ["terminal", "tui", "gpu", "flexbox", "react"]
categories = ["command-line-interface", "gui", "rendering::graphics-api"]
exclude = [
    "docs/WORKER_DIRECTIONS.md",
    ".githooks/",
    ".github/",
]

[lib]
name = "inky"

[dependencies]
# Layout engine (CSS Flexbox/Grid) - replacing Yoga
taffy = "0.7"

# Terminal I/O and events
crossterm = "0.28"

# Error handling
thiserror = "1"
anyhow = "1"

# Unicode text width calculation
unicode-width = "0.2"

# Bitflags for cell attributes
bitflags = "2"

# Faster RwLock (no poisoning, faster uncontended)
parking_lot = "0.12"

# Stack-allocated small vectors (avoids heap for small collections)
smallvec = "1.11"

# Ordered set with O(1) index lookup
indexmap = "2"

# Fast non-cryptographic hash for integer keys (2-3x faster than std HashMap)
rustc-hash = "2"

# Compact string type (inline storage for strings ≤23 bytes)
smartstring = "1"

# Markdown parsing
pulldown-cmark = "0.10"

# Syntax highlighting (optional)
syntect = { version = "5", optional = true, default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }

# Base64 encoding for OSC 52 clipboard
base64 = "0.22"

# Memory-mapped files for shared memory IPC
memmap2 = "0.9"

# PNG encoding for perception screenshots (optional)
image = { version = "0.24", default-features = false, features = ["png"], optional = true }

# Unix signal handling (libc for signal constants)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Logging (optional)
tracing = { version = "0.1", optional = true }

# Async runtime support (optional, for run_async)
tokio = { version = "1", features = ["rt", "time", "sync", "macros"], optional = true }

# GPU acceleration (optional)
wgpu = { version = "23", optional = true }

# Ratatui compatibility (optional)
ratatui = { version = "0.29", optional = true }

# dterm integration (optional, local development only)
# Note: dterm-core is not published to crates.io. This feature is for local
# development with a dterm checkout at ../dterm/
# To enable: uncomment the line below and add `dterm` feature
# dterm-core = { path = "../dterm/crates/dterm-core", optional = true, features = ["ffi", "gpu"] }

[dev-dependencies]
# Snapshot testing
insta = "1"

# Serial test execution for tests with global state
serial_test = "3"

# Property-based testing (Phase 15.1)
proptest = "1.4"

# Benchmarking with regression detection (Phase 15.9)
criterion = "0.5"

# Temporary files for testing
tempfile = "3"

[features]
default = []
tracing = ["dep:tracing"]
# Async runtime support for run_async() (requires tokio)
async = ["dep:tokio"]
# Perception image rendering (PNG)
image = ["dep:image"]
# Syntax highlighting for code blocks (syntect)
syntax-highlighting = ["dep:syntect"]
# GPU acceleration support (for dterm integration)
# When enabled, provides wgpu-based GPU rendering
gpu = ["dep:wgpu"]
# Ratatui compatibility - allows using inky as a ratatui backend
compat-ratatui = ["dep:ratatui"]
# Ratatui scrolling-regions feature passthrough
scrolling-regions = ["compat-ratatui", "ratatui?/scrolling-regions"]
# dterm GPU backend requires local dterm-core checkout at ../dterm/
# This feature is NOT available via crates.io - build from source required
# To enable: uncomment dterm-core dependency above and this feature definition:
# dterm = ["gpu", "dep:dterm-core"]

# Exclude dterm feature from crates.io publishing
[package.metadata.docs.rs]
all-features = false
features = ["gpu", "tracing", "image", "syntax-highlighting"]

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "claude_tui"
path = "examples/claude_tui.rs"

[[example]]
name = "visualization"
path = "examples/visualization.rs"

[[example]]
name = "dashboard"
path = "examples/dashboard.rs"

[[example]]
name = "form"
path = "examples/form.rs"

[[example]]
name = "focus"
path = "examples/focus.rs"

[[example]]
name = "widgets"
path = "examples/widgets.rs"

[[example]]
name = "codex_tui"
path = "examples/codex_tui.rs"

[[example]]
name = "async_streaming"
path = "examples/async_streaming.rs"
required-features = ["async"]

[[example]]
name = "virtual_list"
path = "examples/virtual_list.rs"
required-features = ["async"]

[[example]]
name = "custom_widget"
path = "examples/custom_widget.rs"

[[example]]
name = "ansi_text"
path = "examples/ansi_text.rs"

[[bench]]
name = "render"
harness = false

[[bench]]
name = "regression"
harness = false

[[bench]]
name = "comparison"
harness = false

[lints.rust]
# Enforce modern Rust idioms (but allow elided lifetimes)
rust_2018_idioms = { level = "warn", priority = -1 }
elided_lifetimes_in_paths = "allow"
# Warn on missing docs for public items (enforced in lib.rs)
missing_docs = "warn"

[lints.clippy]
# Enable lint groups with priority -1 to allow individual overrides
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# === Explicit Denies ===
# Library code should never use unwrap() - use expect() or proper error handling
unwrap_used = "deny"

# === Allowed Lints (intentional patterns) ===
# We have many methods that return Self for builder patterns
module_name_repetitions = "allow"
# Must-use on Self-returning methods is too noisy for builder patterns
must_use_candidate = "allow"
# Similar names like current_fg/current_bg are intentional for clarity
similar_names = "allow"
# We use f32 extensively for layout calculations; precision loss is acceptable
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
# Const fn is nice but not critical; many false positives with generic code
missing_const_for_fn = "allow"
# Struct field names like input_text in InputState are clear
struct_field_names = "allow"
# use Self vs Type name - too many to fix, minor style issue
use_self = "allow"
# Returning Self should have must_use - allow for builders
return_self_not_must_use = "allow"
# These are too pedantic for our use case
too_many_lines = "allow"
struct_excessive_bools = "allow"
# Float comparisons - we intentionally compare floats in animations/layouts
float_cmp = "allow"
# Significant drop tightening has many false positives
significant_drop_tightening = "allow"
# Option if-let-else has many false positives and reduces readability
option_if_let_else = "allow"
# Non-send fields warning is too strict for our use case
non_send_fields_in_send_ty = "allow"
# Suboptimal flops - micro-optimization, not critical
suboptimal_flops = "allow"
# Explicit lifetimes can sometimes be clearer
elidable_lifetime_names = "allow"
# Doc formatting - will be handled in 14.6
doc_markdown = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
too_long_first_doc_paragraph = "allow"
# Match arm style preferences - not critical
match_wildcard_for_single_variants = "allow"
match_same_arms = "allow"
# Trivia optimizations
cloned_instead_of_copied = "allow"
trivially_copy_pass_by_ref = "allow"
redundant_clone = "allow"
redundant_closure_for_method_calls = "allow"
needless_collect = "allow"
needless_pass_by_value = "allow"
unnecessary_wraps = "allow"
# Format string style
uninlined_format_args = "allow"
# Items after statements is fine
items_after_statements = "allow"
# Literal formatting
unreadable_literal = "allow"
# map().unwrap_or() is often clearer than map_or
map_unwrap_or = "allow"
# collect().join() is often clearer than fold
unnecessary_join = "allow"
# Single char pattern is fine
single_char_pattern = "allow"
# Cognitive complexity - some functions are inherently complex
cognitive_complexity = "allow"
# Manual implementations are sometimes clearer
manual_let_else = "allow"
manual_map = "allow"
# Explicit iteration is sometimes clearer
explicit_iter_loop = "allow"
# Unnecessary raw string
needless_raw_string_hashes = "allow"
# These are for documentation completeness (will be addressed in 14.6)
missing_docs_in_private_items = "allow"
# Manual Debug impl - sometimes we want partial Debug
manual_non_exhaustive = "allow"
missing_fields_in_debug = "allow"
# derive(Eq) is not always desired (e.g., for f32 containing types)
derive_partial_eq_without_eq = "allow"
# unused_self - sometimes we want to preserve self for API consistency
unused_self = "allow"
# match vs if - style preference
comparison_chain = "allow"
single_match_else = "allow"
# Default::default() vs Type::default() - both are clear
default_trait_access = "allow"
# unnecessary != operation - sometimes clearer
nonminimal_bool = "allow"
if_not_else = "allow"
# if chain vs match - style preference
if_same_then_else = "allow"
match_like_matches_macro = "allow"
# Function call inside unwrap_or - perf micro-optimization
or_fun_call = "allow"
# Cast wrap - we handle this explicitly
cast_possible_wrap = "allow"
