# Copyright 2026 Dropbox (created by Andrew Yates <ayates@dropbox.com>)

# Empty workspace table makes this package standalone (not part of parent workspace)
[workspace]

[package]
name = "dashflow-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
# The fuzz target library
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

# DashFlow crates to fuzz
dashflow = { path = "../crates/dashflow" }
dashflow-streaming = { path = "../crates/dashflow-streaming" }

# Supporting deps
serde_json = "1.0"
prost = "0.13"
csv = "1.3"
serde_yml = "0.0.12"
pulldown-cmark = "0.13"
chrono = "0.4"
regex = "1.10"

# Workspace deps
[dependencies.tokio]
version = "1.38"
features = ["rt", "macros"]

[[bin]]
name = "fuzz_xml_parser"
path = "fuzz_targets/fuzz_xml_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_json_parser"
path = "fuzz_targets/fuzz_json_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_protobuf_codec"
path = "fuzz_targets/fuzz_protobuf_codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_signature_parser"
path = "fuzz_targets/fuzz_signature_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_regex_parser"
path = "fuzz_targets/fuzz_regex_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_datetime_parser"
path = "fuzz_targets/fuzz_datetime_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_csv_parser"
path = "fuzz_targets/fuzz_csv_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_yaml_parser"
path = "fuzz_targets/fuzz_yaml_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_markdown_parser"
path = "fuzz_targets/fuzz_markdown_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_email_parser"
path = "fuzz_targets/fuzz_email_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ics_parser"
path = "fuzz_targets/fuzz_ics_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_vcf_parser"
path = "fuzz_targets/fuzz_vcf_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_query_parser"
path = "fuzz_targets/fuzz_query_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_list_parsers"
path = "fuzz_targets/fuzz_list_parsers.rs"
test = false
doc = false
bench = false
