[package]
name = "dashflow-test-utils"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
dashflow.workspace = true
dashflow-streaming = { path = "../crates/dashflow-streaming" }

# Mock server support (M-240: strict mock servers)
wiremock = { workspace = true, optional = true }

[features]
default = []
# Enable strict mock server helpers for testing HTTP clients
mock-server = ["dep:wiremock"]

[dev-dependencies]
futures = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
