[workspace]
resolver = "2"
members = [
    "dashterm-terminal",
    "dashterm-graph",
    "dashterm-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Andrew Yates"]
license = "Apache-2.0"
repository = "https://github.com/dropbox/dTOOL/dashterm"

[workspace.dependencies]
# Terminal emulation
vte = "0.15"
alacritty_terminal = "0.25"

# Async runtime
tokio = { version = "1.45", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph computation
petgraph = "0.7"

# FFI
libc = "0.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Unicode
unicode-width = "0.2"
unicode-segmentation = "1.12"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
