[package]
name = "codex-dashflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core agent logic using DashFlow StateGraph"

[features]
default = []
# Enable DashFlow Streaming integration (requires protoc)
dashstream = ["dashflow-streaming", "dashflow/dashstream"]
# Enable PostgreSQL checkpointing for production use
postgres = ["dashflow-postgres-checkpointer"]
# Enable LLM-as-judge quality scoring (requires dashflow-evals)
llm-judge = ["dashflow-evals"]

[dependencies]
dashflow.workspace = true
dashflow-streaming = { workspace = true, optional = true }
dashflow-postgres-checkpointer = { workspace = true, optional = true }
dashflow-evals = { workspace = true, optional = true }
dashflow-shell-tool.workspace = true
async-openai.workspace = true
dashflow-file-tool.workspace = true
dashflow-openai.workspace = true
dashflow-anthropic.workspace = true
dashflow-context.workspace = true
dashflow-git-tool.workspace = true
dashflow-project.workspace = true
dashflow-prompts.workspace = true
dashflow-observability.workspace = true
codex-dashflow-mcp = { path = "../mcp" }
codex-dashflow-sandbox = { path = "../sandbox" }
codex_dashflow_file_search = { path = "../file-search" }
codex-dashflow-apply-patch = { path = "../apply-patch" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
futures.workspace = true
async-stream.workspace = true
async-channel = "2"
schemars.workspace = true
toml.workspace = true
dirs = "5.0"
keyring.workspace = true
chrono.workspace = true
sha2.workspace = true
tiny_http.workspace = true
urlencoding.workspace = true
base64.workspace = true
webbrowser.workspace = true
reqwest.workspace = true
rand = "0.9"
url = "2"
regex.workspace = true
tree-sitter.workspace = true
tree-sitter-bash.workspace = true
which.workspace = true
libc.workspace = true
chardetng.workspace = true
encoding_rs.workspace = true
shell-words = "1.1"
once_cell = "1.19"
tokio-util = { version = "0.7", features = ["rt"] }
sha1 = "0.10"
similar = "2"
tempfile = "3"

[dev-dependencies]
pretty_assertions.workspace = true
insta.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "agent_loop"
harness = false

[[bench]]
name = "nodes"
harness = false
