[package]
name = "codex-dashflow-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Non-interactive execution mode for Codex DashFlow"

[dependencies]
codex-dashflow-core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
