[package]
name = "codex_dashflow_file_search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Fuzzy file search using nucleo-matcher"

[dependencies]
nucleo-matcher = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
