[package]
name = "codex-dashflow-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Model Context Protocol support for Codex DashFlow"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
rmcp.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
