[package]
name = "codex-dashflow-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for Codex DashFlow"

[dependencies]
codex-dashflow-core = { path = "../core" }
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true

pulldown-cmark.workspace = true
chrono.workspace = true
serde_json.workspace = true
dirs.workspace = true
arboard.workspace = true
tokio-util.workspace = true
codex_dashflow_file_search = { path = "../file-search" }

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
serial_test.workspace = true
