[package]
name = "dashflow-annoy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Annoy vector store integration for DashFlow"
repository.workspace = true
homepage.workspace = true
keywords = ["dashflow", "llm", "vector-store", "annoy", "ann"]
categories = ["algorithms", "science"]
license.workspace = true

[dependencies]
dashflow = { path = "../dashflow" }
async-trait = { workspace = true }
serde.workspace = true
serde_json = { workspace = true }
tokio = { workspace = true }
arroy = "0.6"
heed = "0.22"  # LMDB wrapper used by arroy - must match arroy's version
tempfile = { workspace = true }
uuid.workspace = true
rand = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
