[package]
name = "dashflow-bedrock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description = "AWS Bedrock integration for DashFlow"

[dependencies]
# Workspace dependencies
dashflow.workspace = true
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# AWS SDK dependencies
aws-config = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
aws-credential-types = "1.2"
aws-types = "1.3"
aws-smithy-types = "1.2"
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
dashflow-standard-tests.workspace = true
dashflow-test-utils.workspace = true

[lints]
workspace = true
