[package]
name = "dashflow-benchmarks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description = "Performance benchmarks for DashFlow"

[dependencies]
dashflow.workspace = true
dashflow-text-splitters.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
async-trait = { workspace = true }
# For registry benchmarks
sha2 = { workspace = true }
flate2 = "1.0"

[[bench]]
name = "core_benchmarks"
harness = false

[[bench]]
name = "loader_benchmarks"
harness = false

[[bench]]
name = "vectorstore_benchmarks"
harness = false

[[bench]]
name = "embeddings_benchmarks"
harness = false

[[bench]]
name = "text_splitter_benchmarks"
harness = false

[[bench]]
name = "chat_model_benchmarks"
harness = false

[[bench]]
name = "registry_benchmarks"
harness = false

[[bench]]
name = "graph_benchmarks"
harness = false

[lints]
workspace = true
