[package]
name = "dashflow-brave"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Brave Search tool for DashFlow - Privacy-focused web search"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
dashflow = { path = "../dashflow" }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde.workspace = true
serde_json = { workspace = true }
tokio = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]

[lints]
workspace = true
