[package]
name = "dashflow-calculator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
description = "Calculator tool for DashFlow - evaluate mathematical expressions"

[dependencies]
# Workspace dependencies
dashflow.workspace = true
async-trait = { workspace = true }
serde_json = { workspace = true }

# Math expression evaluation
evalexpr = "11.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
dashflow-test-utils.workspace = true

[[example]]
name = "calculator_tool"
path = "examples/calculator_tool.rs"

[lints]
workspace = true
