[package]
name = "dashflow-cassandra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["DashFlow Contributors"]
description = "Apache Cassandra / Astra DB vector store implementation for DashFlow"
repository.workspace = true
homepage.workspace = true
keywords = ["dashflow", "cassandra", "astra", "vector", "database"]
categories = ["database"]
license.workspace = true

[dependencies]
dashflow.workspace = true

# Async trait support
async-trait = { workspace = true }
# Cassandra driver (Scylla is fully compatible with Apache Cassandra)
scylla = "0.14"
# Async runtime
tokio = { workspace = true }
# Error handling
thiserror = { workspace = true }
# Serialization
serde.workspace = true
serde_json = { workspace = true }
# UUID generation for document IDs
uuid.workspace = true
# Logging
tracing = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
