[package]
name = "dashflow-chains"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Chains for composing LLM workflows - document combiners, sequential processing, and more"
repository.workspace = true
homepage.workspace = true
keywords = ["dashflow", "llm", "ai", "chains"]
categories = ["api-bindings"]
license.workspace = true

[features]
# Playwright feature DISABLED - playwright crate has RUSTSEC-2020-0071 (time 0.1.45 segfault vulnerability)
# dashflow-playwright is excluded from workspace until security issue resolved upstream.
# Feature removed entirely to prevent --all-features compilation failures.
# Re-add when dashflow-playwright is restored to workspace.

[dependencies]
dashflow = { path = "../dashflow" }
dashflow-memory = { path = "../dashflow-memory" }
dashflow-neo4j = { path = "../dashflow-neo4j" }
dashflow-text-splitters = { path = "../dashflow-text-splitters" }
async-trait = { workspace = true }
serde.workspace = true
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
fasteval = "0.2"
regex = { workspace = true }
async-openai = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
url = { workspace = true }

[dev-dependencies]
dashflow-openai = { path = "../dashflow-openai" }
proptest = { workspace = true }

[lints]
workspace = true
